<resources>
    <string name="app_name">BeerFit</string>
    <string name="add_an_activity">Add An Activity</string>
    <string name="edit_your_activity">Edit Your Activity</string>
    <string name="select_exercise">Select Exercise</string>
    <string name="activity">Activity</string>
    <string name="select_time">Select Time</string>
    <string name="enter_duration">Enter Duration</string>
    <string name="add_activity">Add Activity</string>
    <string name="update_activity">Update Activity</string>
    <string name="add_a_goal">Add A Goal</string>
    <string name="edit_your_goal">Edit Your Goal</string>
    <string name="to_earn_a_beer">To Earn A Beer…</string>
    <string name="add_goal">Add Goal</string>
    <string name="update_goal">Update Goal</string>
    <string name="one_beer_left">1 Beer Left</string>
    <string name="beers_left">%1$d Beers Left</string>
    <string name="earned_a_beer">Earned A Beer</string>
    <string name="drank_a_beer">Drank A Beer</string>
    <string name="beerfit_activities">BeerFit Activities</string>
    <string name="beerfit_metrics">BeerFit Metrics</string>
    <string name="beerfit_goals">BeerFit Goals</string>
    <string name="activities">Activities</string>
    <string name="goals">Goals</string>
    <string name="metrics">Metrics</string>
    <string name="Close">Close</string>
    <string name="Open">Open</string>
    <string name="update_time">Update Time</string>
    <string name="enter_amount">Enter Amount</string>
    <string name="drank_beer">Drank Beer</string>
    <string name="beer">beer</string>
    <string name="indicate_exercise">You need to indicate some exercise</string>
    <string name="indicate_duration">You need to indicate some duration</string>
    <string name="export_data">Export Data</string>
    <string name="import_data">Import Data</string>
    <string name="plural">%1$ss</string>
    <string name="plural_e">%1$ses</string>
    <string name="edit_exercises">Edit Exercises</string>
    <string name="edit_measurements">Edit Measurements</string>

    <string name="add_new_exercise">Add New Exercise</string>
    <string name="edit_exercise">Edit Exercise</string>
    <string name="delete_exercise">Delete Exercise</string>
    <string name="modify_exercise">Select Exercise to Modify</string>
    <string name="add_new">Add New</string>
    <string name="edit">Edit</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="exercise_description">Exercise Description (Run)</string>
    <string name="past_tense_exercise_description">Past Tense Exercise Description (Ran)</string>
    <string name="exercise_color">Exercise Color</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="choose">Choose</string>
    <string name="choose_color">Choose Color</string>
    <string name="duplicate_exercise_color">Another Exercise Already Has This Color</string>
    <string name="duplicate_exercise_description">This Exercise Description Already Exists!</string>
    <string name="duplicate_exercise_past_description">This Past Tense Exercise Description Already Exists!</string>
    <string name="past_exercise_required">Past Tense Exercise Description is Required!</string>
    <string name="exercise_required">Exercise Description is Required!</string>
    <string name="confirm_exercise_delete">Do you really want to delete the exercise \'%1$s\'?</string>
    <string name="unable_to_delete_exercise">Unable to delete this exercise, as you have goals and/or activities utilizing this exercise!</string>

    <string name="add_new_measurement">Add New Measurement</string>
    <string name="edit_measurement">Edit Measurement</string>
    <string name="delete_measurement">Delete Measurement</string>
    <string name="measurement_description">Singular Measurement Name</string>
    <string name="modify_measurement">Select Measurement to Modify</string>
    <string name="measurement_required">Measurement Name is Required!</string>
    <string name="duplicate_measurement_description">This Measurement Name Already Exists!</string>
    <string name="confirm_measurement_delete">Do you really want to delete the measurement \'%1$s\'?</string>
    <string name="unable_to_delete_measurement">Unable to delete this measurement, as you have goals and/or activities utilizing this measurement!</string>

    <string name="_for_">for</string>
    <string name="on">On</string>
    <string name="at">at</string>

    <string name="delete_goal">Delete Goal</string>
    <string name="confirm_goal_delete">Do you really want to delete the goal \'%1$s\'?</string>
    <string name="delete_activity">Delete Activity</string>
    <string name="confirm_activity_delete">Do you really want to delete the activity \'%1$s\' on %2$s?</string>

    <string name="no_goals_present">No Goals Present</string>
    <string name="no_goals_set">You don\'t have any goals created. You won\'t earn any beers until you add at least one goal.</string>
    <string name="no_store_access">The app was not allowed to read your store.</string>
</resources>
