<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/editExerciseModal"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editExerciseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="10dp"
        android:autofillHints="@string/exercise_description"
        android:hint="@string/exercise_description"
        android:inputType="text" />

    <EditText
        android:id="@+id/editExercisePastName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:padding="10dp"
        android:autofillHints="@string/past_tense_exercise_description"
        android:hint="@string/past_tense_exercise_description"
        android:inputType="text" />

    <TextView
        android:id="@+id/editExerciseColor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:padding="10dp"
        android:autofillHints="@string/exercise_color"
        android:hint="@string/exercise_color"/>

</LinearLayout>