<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddGoalActivity">

    <TextView
        android:id="@+id/viewGoalsSubtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/to_earn_a_beer"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/goalSelectionHeader"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/goalSelectionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_activity"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/goalSelection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewGoalsSubtitle" />

    <Spinner
        android:id="@+id/goalSelection"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@+id/goalDurationHeader"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalSelectionHeader" />

    <TextView
        android:id="@+id/goalDurationHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_duration"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/goalDurationUnits"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalSelection" />

    <EditText
        android:id="@+id/goalDurationInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="5dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintBottom_toTopOf="@+id/submitGoal"
        app:layout_constraintEnd_toStartOf="@+id/goalDurationUnits"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalDurationHeader" />

    <Spinner
        android:id="@+id/goalDurationUnits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="24dp"
        app:layout_constraintBottom_toTopOf="@+id/submitGoal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/goalDurationInput"
        app:layout_constraintTop_toBottomOf="@+id/goalDurationHeader" />

    <Button
        android:id="@+id/submitGoal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:onClick="addGoal"
        android:text="@string/add_goal"
        android:backgroundTint="@color/colorPrimaryDark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/goalDurationUnits" />

</androidx.constraintlayout.widget.ConstraintLayout>