<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/on"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/on"
        android:textSize="12sp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toTopOf="@+id/activityDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/activityDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/activityExercise"
        app:layout_constraintEnd_toStartOf="@+id/at"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/on" />

    <TextView
        android:id="@+id/at"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/at"
        android:textSize="12sp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/activityExercise"
        app:layout_constraintEnd_toStartOf="@+id/activityTime"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/activityDate"
        app:layout_constraintTop_toBottomOf="@+id/on" />

    <TextView
        android:id="@+id/activityTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="16sp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toTopOf="@+id/activityExercise"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/at"
        app:layout_constraintTop_toBottomOf="@+id/on" />

    <Spinner
        android:id="@+id/activityExercise"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/_for_"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityDate" />

    <TextView
        android:id="@+id/_for_"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/_for_"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/activityAmount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activityExercise" />

    <EditText
        android:id="@+id/activityAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="5dp"
        android:inputType="numberDecimal"
        android:textSize="16sp"
        android:ems="4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/activityMeasurement"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/_for_"
        android:hint=""
        android:autofillHints="" />

    <Spinner
        android:id="@+id/activityMeasurement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="24dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toEndOf="@+id/activityAmount"
        app:layout_constraintTop_toBottomOf="@+id/_for_" />

</androidx.constraintlayout.widget.ConstraintLayout>